<resources>
    <string name="app_name">Week-6-Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="name">Full Name</string>
    <string name="first_name">First Name: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="phone_number">Phone Number: %1$s</string>
    <string name="last_name">Last Name: %1$s</string>
    <string name="first_implementation">first implementation</string>
    <string name="second_implementation">second Implementation</string>
</resources>